--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
   <meta charset="utf-8">
-  <title>WhereDrink Admin</title>
+  <meta name="google-signin-client_id" content="27306456236-q2stdaobd5sl3q8nddgnshed1d7bbki0.apps.googleusercontent.com">
+  <title>WhereDrink</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <script>
+    function onLoadCallback() {
+        gapi.load('auth2', function() {
+          gapi.auth2.init({
+              client_id: '27306456236-q2stdaobd5sl3q8nddgnshed1d7bbki0.apps.googleusercontent.com',
+              scope: 'email'
+          });        
+        });     
+      }
+  </script>
 <link rel="stylesheet" href="styles.a275f24a41a229c19b5e.css"></head>
 <body>
   <app-root>
-            <div class="spinner">
-                <div class="bounce1"></div>
-                <div class="bounce2"></div>
-                <div class="bounce3"></div>
-            </div>
+      <div class="spinner">
+          <div class="bounce1"></div>
+          <div class="bounce2"></div>
+          <div class="bounce3"></div>
+      </div>
   </app-root>
-<script type="text/javascript" src="runtime.03c8e2ddda6c3679095b.js"></script><script type="text/javascript" src="polyfills.4977d2af3a201d86a3b5.js"></script><script type="text/javascript" src="scripts.b5ea1a3cf9f89977f873.js"></script><script type="text/javascript" src="main.5dba104c569e2f89e18b.js"></script></body>
+<script type="text/javascript" src="runtime.8823de88f5ccbc7fb7b7.js"></script><script type="text/javascript" src="polyfills.4977d2af3a201d86a3b5.js"></script><script type="text/javascript" src="scripts.b5ea1a3cf9f89977f873.js"></script><script type="text/javascript" src="main.2c0c74e39b37a7e4277f.js"></script></body>
 </html>
